# connectchain

./: .coverage  .ge_ignore  .gitignore  .pylintrc  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  version_bump.py
.github/: pull_request_template.md  review_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request_template.md
connectchain/: __init__.py
connectchain/chains/: __init__.py  valid_llm_chain.py
connectchain/config/: example.config.yml
connectchain/examples/: __init__.py  langchain_chains.py  langchain_prompts.py  langchain_tools.py  langchain_utils.py  lcel_graph_of_thoughts.py  lcel_multi_model.py  lcel_pitch_orchestrator.py  lcel_tree_of_thoughts.py  openai_utils.py  orchestrators.py  retry_complex.py  retry_decorator.py  retry_simple.py
connectchain/examples/example_files/: children_book.txt  food_description.txt
connectchain/lcel/: __init__.py  logger.py  model.py  retry.py
connectchain/orchestrators/: __init__.py  portable_orchestrator.py
connectchain/prompts/: __init__.py  validated_prompt_template.py
connectchain/test/: __init__.py  setup_utils.py  test_config.py  test_exception.py  test_lcel_logger.py  test_lcel_retry.py  test_model.py  test_portable_orchestrator.py  test_proxy_manager.py  test_proxy_wrapper.py  test_retry_utils.py  test_session_map.py  test_token_util.py  test_valid_llm_chain.py  test_valid_prompt_template.py
connectchain/tools/: __init__.py  validated_python_repl.py
connectchain/utils/: __init__.py  config.py  exceptions.py  llm_proxy_wrapper.py  proxy_manager.py  retry.py  session_map.py  token_util.py
test_auth_service/: README.md  main.py
